# foresight

./: Cargo.toml  README.md  RELEASES.md  book.toml
.github/PULL_REQUEST_TEMPLATE/: content.md
.github/workflows/: ci.yml  release.yml
docs/src/: balancing_rpg_and_rng.md  combat.md  communicate.md  enemies.md  overview.md  progression.md  spell_ideas.md  spells.md  spells_legacy.md
src/: combat.rs  combat_flow.rs  combat_interface.rs  combat_mechanics.rs  combat_setup.rs  combat_statistics.rs  console.rs  creatures.rs  keyboard_variants.rs  lib.rs  main.rs  rng.rs  system_sequence.rs  ui.rs
src/actions/: attack.rs  available_actions.rs  mod.rs
