[package]
name = "foresight"
description = "A classic terminal RPG about RNG manipulation."
version = "0.0.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/leafwing-studios/foresight"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games"]
keywords = ["bevy", "rpg"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["dynamic"]}
bevy_console = "0.2.5"
bevy_system_graph = "0.1"
bevy_egui = "0.11"

[patch.crates-io]
# Custom fork, based off of https://github.com/RichoDemus/bevy-console/pull/4
bevy_console = {git = "https://github.com/alice-i-cecile/bevy-console"}


[lib]
name = "foresight_lib"
path = "src/lib.rs"

[[bin]]
name = "foresight_bin"
path = "src/main.rs"
