[package]
name = "foresight"
description = "A classic terminal RPG about RNG manipulation."
version = "0.0.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/leafwing-studios/foresight"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games"]
keywords = ["bevy", "rpg"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["dynamic"]}
leafwing_terminal = {git = "https://github.com/Leafwing-Studios/leafwing_terminal"}
bevy_system_graph = "0.1"
bevy_egui = "0.11"
arraydeque = "0.4"

[lib]
name = "foresight_lib"
path = "src/lib.rs"

[[bin]]
name = "foresight_bin"
path = "src/main.rs"
